# bazi-skills

./: .gitignore  README.md  pyproject.toml
data/: bazi.json
paipan/: __main__.py
skills/bazi/: SKILL.md
src/: __init__.py  analyze.py  bazi.py  cli.py  paipan.py  search.py
src/analysis/: __init__.py  context.py  methods.py  topics.py
src/engine/: chart.py  config.py  core.py  extractor.py  models.py  preprocessor.py  schemas.py
src/engine/algorithms/: analysis.py  command.py  energy.py  geju.py  interactions.py  stars.py
src/engine/data/: __init__.py
tests/: bazi.json  regression_test_full.json  supreme_audit.json  supreme_audit.py  test_analyze.py  test_bazi_cli.py  test_engine_modes.py  test_search.py  test_supreme_audit.py
